# SignalCompression

./: .gitignore  CMakeLists.txt
compression_tool/: CMakeLists.txt  benchmark_record.h  compressors.cpp  compressors.h  main.cpp
data/: benchmark_result.csv  benchmark_result.txt  czech.txt  english.txt  exponential_16.txt  exponential_8.txt  french.txt  gausian_16.txt  gausian_8.txt  hungarian.txt  test.txt  uniform_16.txt  uniform_8.txt
data/similarity/: 000.txt  010.txt  020.txt  030.txt  040.txt  050.txt  060.txt  070.txt  080.txt  090.txt
project/: benchmark_result.csv  citations.bib  data_cr.data  data_time.data  document.tex  draft.docx  entropy.data
project/r_proj/: script.R
src/: Span.h  bwt.cpp  bwt.h  cyclic_span.h  entropy.cpp  entropy.h  fibonacci_coding.h  generic_huffman.h  huffman.cpp  huffman.h  lz_node.h  lz_tree.h  lzss.cpp  lzss.h  lzw.cpp  lzw.h  main.cpp  move_to_front.cpp  move_to_front.h  ring_buffer.h  rle.cpp  rle.h  sliding_window.h  span.h  symbol_info.h  variable_length_codes.h
src/lzss/: lz_match.h  lz_node.h  lz_tree.h  lzss.cpp  lzss.h  lzss_token.cpp  lzss_token.h
